# multiPhysics

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  _config.yml  cmake_install.cmake  compile_all.sh  compile_commands.json  index.md  main.cc
_layouts/: default.html
applications/: main.cc
applications/3D_sys_128x128x128_3/: parameters_pf.prm  prm_comp_3.prm  submit_gl.sh
applications/3D_sys_32x32x32/: grainID_single64_check.txt  parameters_pf.prm  submit_gl.sh
applications/3D_sys_32x32x32_3/: CMakeLists.txt  prm_comp_3.prm  submit_gl.sh
applications/3D_sys_32x32x32_3_consolidated/: parameters_pf.prm  prm_comp_3.prm  twinNormals.txt
applications/3D_sys_32x32x32_3_const_DF_2/: parameters_pf.prm
applications/3D_sys_32x32x32_3_const_DF_3/: parameters_pf.prm  prm_comp_3.prm
applications/3D_sys_64x64x64_2/: grainID_single32_check.txt  parameters_pf.prm  prm_comp_3.prm
applications/3D_sys_64x64x64_3/: grainID_single_32x32x32.txt  parameters_pf.prm  prm_comp_3.prm  submit_gl.sh
applications/allenCahn/: CMakeLists.txt  customPDE.h
applications/crystalPlasticity/: Makefile  cmake_install.cmake  integratedFields.txt  linking_error_messages.txt  main.cc  orientations_single.txt  orientations_twin_single.txt  parameters_pf.prm  prm.prm  prm_comp.prm  prm_comp_2.prm  prm_comp_3.prm
applications/singleTwin3D/: CMakeLists.txt  equations.cc  main.cc  parameters_cp.prm  parameters_pf.prm  postprocess.cc  singleTwin3D.md  twinDirections.txt
applications/singleTwin3D_CPFE_8x8x8_ref/: ICs_and_BCs.cc  customPDE.h  grainID_single_8x8x8.txt  parameters_pf.prm
applications/singleTwin3D_CPFE_8x8x8_test_dealii_9.6_compatibility/: gen_grainID_file.py  parameters_cp.prm  parameters_pf.prm
doxygen/1.0.0/: _bin_8hh_source.html  _body_8hh_source.html  _coordinate_8hh_source.html  _cu__hardening_8hh_source.html  _equation_dependency_parser_8h_source.html  _flood_filler_8h_source.html  _hexahedron_8hh_source.html  _interpolator_8hh_source.html  _material_models_2_rate_dependent_model_2user_functions_8cc_source.html  _mesh_8hh_source.html  _order_parameter_remapper_8h_source.html  _p_basis_set_8hh_source.html  _p_basis_set_base_8hh_source.html  _p_extern_8hh_source.html  _p_field_8hh_source.html  _p_flex_function_8hh_source.html  _p_func_base_8hh_source.html  _p_function_8hh_source.html  _p_library_8hh_source.html  _p_library_extern_8hh_source.html  _p_n_d_array_8hh_source.html  _p_piece_wise_8hh_source.html  _p_piece_wise_func_base_8hh_source.html  _p_piece_wise_simple_base_8hh_source.html  _p_series_function_8hh_source.html  _p_simple_base_8hh_source.html  _p_simple_function_8hh_source.html  _parse_command_line_opts_8h_source.html  _piece_8hh_source.html  _quad_8hh_source.html  _refinement_criterion_8h_source.html  _simple_piece_8hh_source.html  _simplified_grain_representation_8h_source.html  _solver_parameters_8h_source.html  annotated.html  annotated_dup.js  applications.html  applications_8h_source.html  class_equation_dependency_parser-members.html  class_equation_dependency_parser.html  (+1672 more)
include/: FloodFiller.h  OrderParameterRemapper.h  continuumPlasticity.h  continuumPlasticity_template_instantiations.h  crystalOrientationsIO_template_instantiations.h  crystalPlasticity.h  customPDE.h  customPDE_template_instantiations.h  dealIIheaders.h  fields.h  initialConditions.h  matrixFreePDE.h  matrixFreePDE_template_instantiations.h  multiPhysicsBVP.h  multiPhysicsBVP_template_instantiations.h  nonUniformDirichletBC.h  typeDefs.h  userInputParameters_cp.h  userInputParameters_pf.h  userInputParameters_pf_template_instantiations.h  variableContainer.h
pages/: TroubleshootingFAQ.md  announcements.md  installation.md  tutorial.md
src/OrderParameterRemapper/: OrderParameterRemapper.cc
src/customPDE/: ICs_and_BCs.cc  equations.cc  postprocess.cc
src/ellipticBVP/: applyInitialConditions_cp.cc  assemble.cc  boundaryConditions.cc  ellipticBVP.cc  incrementUpdates.cc  indentationBCs.cc  init_cp.cc  iterationUpdates.cc  markBoundaries_cp.cc  mesh.cc  output.cc  periodicBCs.cc  projectionFunctions.cc  run.cc  solveLinearSystem.cc  solveNonLinearSystem.cc  solve_cp.cc  userModelMethods.cc
src/enrichmentModels/: enhancedStrain.h
src/inputFileReader/: inputFileReader.cc
src/matrixfree/: init.cc  matrixFreePDE.cc  outputResults.cc  solve.cc
src/multiPhysicsBVP/: applyInitialConditions_cp.cc  assemble.cc  boundaryConditions_cp.cc  boundaryConditions_pf.cc  buildFields.cc  checkpoint.cc  computeIntegral.cc  computeLHS.cc  computeRHS.cc  dataTransfer.cc  incrementUpdates.cc  indentationBCs.cc  initForTests.cc  init_cp.cc  init_pf.cc  initialConditions.cc  invM.cc  iterationUpdates.cc  markBoundaries_cp.cc  markBoundaries_pf.cc  matrixFreePDE.cc  mesh.cc  multiPhysicsBVP.cc  nucleation.cc  output.cc  outputResults.cc  periodicBCs.cc  postprocessor.cc  projectionFunctions.cc  reassignGrains.cc  refine.cc  reinit.cc  run.cc  setNonlinearEqInitialGuess.cc  solveIncrement.cc  solveLinearSystem.cc  solveNonLinearSystem.cc  solve_cp.cc  solve_pf.cc  userModelMethods.cc  (+1 more)
src/userInputParameters_cp/: userInputParameters_cp.cc  userInputParameters_cp.h
src/userInputParameters_pf/: loadVariableAttributes.cc  setTimeStepList.cc  userInputParameters_pf.cc
src/utilityObjects/: crystalOrientationsIO.cc  staticCondensation.cc
src/variableContainer/: variableContainer.cc
src_cp/ellipticBVP/: applyInitialConditions.cc  assemble.cc  boundaryConditions.cc  ellipticBVP.cc  incrementUpdates.cc  indentationBCs.cc  init.cc  iterationUpdates.cc  markBoundaries.cc  mesh.cc  output.cc  run.cc  (+6 more)
tools/: euler_to_rodrigues.py  rodrigues_to_euler.py
(+139 files in other folders)
